syntax = "proto3";
package pb;
import "packet.proto";
option go_package = "../pb";  // 声明生成的 go 文件所属的包

// 登陆请求
message GameLoginRequest {
    RpcHead Head = 1;
}

message GameLoginResponse {
    RpcHead Head = 1;
}
