syntax = "proto3";
package pb;
option  go_package = "../pb";  // 声明生成的 go 文件所属的包

message LimitUpStockConfig {
    uint32 ID                  = 1;   // 序号
    uint32 Code                = 2;   // 股票代码
    string Name                = 3;   // 股票简称
    float  Price               = 4;   // 股票现价
    float  TTM                 = 5;   // 涨跌幅
    string Concept             = 6;   // 概念
    string LimitUpBegin        = 7;   // 首次涨停时间
    string LimitUpEnd          = 8;   // 最终涨停时间
    uint32 ContinueLimitUpDay  = 9;   // 连续涨停天数
    string LimitUpReason       = 10;  // 涨停原因
    float  LimitUpBuyingVolume = 11;  // 涨停封单量
    float  LimitUpBuyingValue  = 12;  // 涨停封单额
    string Address             = 13;  // 注册地址
    string Business            = 14;  // 经营范围
    string Industry            = 15;  // 行业
}

message LimitUpStockConfigAry {
    repeated LimitUpStockConfig Ary = 1;
}
